--- a/learn/templates/list.html
+++ b/learn/templates/list.html
@@ -87,10 +87,12 @@
 
 	        <div class="homepage-banner">
             <div class="animation-container">
-
                 <div class="logo">
                    <p align="value"><img src="../../static/img/title.png" width="50%" height="55%" ></p>
-            </div>
+                    <p style="position:fixed;top:0px;"><img src="../../static/img/title_img.png" ></p>
+                    <p style="position:fixed;top:5px;left:15px;"><img src="../../static/img/logo.png" width="70%" height="70%"></p>
+                    <p style="position:fixed;top:-1px;right:15px;"><img src="../../static/img/cata.png" width="70%"></p>
+                 </div>
             <div class="mask">
                 <img src="../../static/img/shade.png" width="100%" height="100%">
             </div>
@@ -98,6 +100,7 @@
               <source src="../../static/fonts/satellite.mp4" type="video/mp4" />
               <source src="../../static/fonts/satellite.webm" type="video/webm" />Please upgrade your browser, it does not support the video tag.
             </video>
+
           </div>
                 <div class="textdown"><p align="value" style="color:white;">基于豆瓣及京东用户对读书条目的评分、标记和评价 (统计截至2019-4-1)</p></div>
 
