--- a/learn/templates/list.html
+++ b/learn/templates/list.html
@@ -105,6 +105,9 @@
                 <div class="textdown"><p align="value" style="color:white;">基于豆瓣及京东用户对读书条目的评分、标记和评价 (统计截至2019-4-1)</p></div>
 
         </div>
+
+            </div>
+
             <div style="background-color: #5cb85c" id="page2" class="page">
                    <div id="container" class="div1" style="width: 600px;height: 500px"></div>
                    <div id="container2" class="div2" style="width: 600px;height: 500px"></div>
@@ -114,7 +117,9 @@
 
 
             </div>
+
             <div style="background-color: #8a6d3b" id="page3" class="page">
+
 
             </div>
             <div style="background-color: #337ab7" id="page4" class="page">
