--- a/static/css/index.css
+++ b/static/css/index.css
@@ -33,13 +33,13 @@
             position: fixed;
             right: 10px;
         }
-        #page2{
+        #page3{
                 position:relative;
                 text-align:center;
             }
         .div1{
                 position:absolute;
-
+                top:30px;
                 left:0px;
         }
         .div2{
@@ -49,6 +49,7 @@
         }
         .div3{
                 position:absolute;
+                top:30px;
                 right:0px;
         }
         .div4{
@@ -57,7 +58,7 @@
                 left:600px;
         }
         .div5{
-                position:absolute;
+                position:absolute   ;
                 left:600px;
         }
         h1{
@@ -77,4 +78,8 @@
                 width:100%;
                 height:50px;
                 text-align:center;
+        }
+        #page2{
+            position:relative;
+
         }
