--- a/learn/templates/list.html
+++ b/learn/templates/list.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="A high-quality &amp; free Bootstrap admin dashboard template pack that comes with lots of templates and components.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-gl/echarts-gl.min.js"></script>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-stat/ecStat.min.js"></script>
@@ -14,34 +16,61 @@
     <script type="text/javascript" src="../../static/js/macarons.js"></script>
     <script type="text/javascript" src="../../static/js/walden.js"></script>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <meta name="description" content="A high-quality &amp; free Bootstrap admin dashboard template pack that comes with lots of templates and components.">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="../../static/js/jquery.colorbox.js"></script>
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" href="../../static/css/shards-dashboards.1.1.0.min.css">
     <link rel="stylesheet" href="../../static/css/extras.1.1.0.min.css">
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <link rel="stylesheet" href="../../static/css/colorbox.css" />
+
     <link rel="stylesheet" href="../../static/css/index.css">
 
     <title>计算机类图书信息分析</title>
-    <script type="text/javascript">
-        //弹出隐藏层
-        function ShowDiv(show_div, bg_div) {
-            document.getElementById(show_div).style.display = 'block';
-            document.getElementById(bg_div).style.display = 'block';
-            var bgdiv = document.getElementById(bg_div);
-            bgdiv.style.width = document.body.scrollWidth;  // bgdiv.style.height = $(document).height();
 
-            $("#" + bg_div).height($(document).height());
-        };
-        //关闭弹出层
-        function CloseDiv(show_div, bg_div) {
-            document.getElementById(show_div).style.display = 'none';
-            document.getElementById(bg_div).style.display = 'none';
-        };
-    </script>
+    <script type="text/javascript">
+
+			$(document).ready(function(){
+
+				$(".iframe").colorbox({iframe:true, width:"80%", height:"80%"});
+
+				$(".callbacks").colorbox({
+
+					onOpen:function(){ alert('onOpen: colorbox is about to open'); },
+
+					onLoad:function(){ alert('onLoad: colorbox has started to load the targeted content'); },
+
+					onComplete:function(){ alert('onComplete: colorbox has displayed the loaded content'); },
+
+					onCleanup:function(){ alert('onCleanup: colorbox has begun the close process'); },
+
+					onClosed:function(){ alert('onClosed: colorbox has completely closed'); }
+
+				});
+
+
+
+				$('.non-retina').colorbox({rel:'group5', transition:'none'})
+
+				$('.retina').colorbox({rel:'group5', transition:'none', retinaImage:true, retinaUrl:true});
+
+
+
+				//Example of preserving a JavaScript event for inline calls.
+
+				$("#click").click(function(){
+
+					$('#click').css({"background-color":"#f00", "color":"#fff", "cursor":"inherit"}).text("Open this window again and this message will still be here.");
+
+					return false;
+
+				});
+
+			});
+
+		</script>
 
 
     <style type="text/css">
@@ -102,7 +131,7 @@
 
             .left{}
             .right{position:absolute;right:10px;width:520px;}
-
+			
             #p2_s1{
             position:absolute;
             top:80px;
@@ -216,37 +245,14 @@
                 filter: alpha(opacity=80);
             }
 
-            .white_content {
-                display: none;
-                position: absolute;
-                top: 10%;
-                left: 10%;
-                width: 80%;
-                height: 80%;
-                border: 16px solid lightblue;
-                background-color: white;
-                z-index: 1002;
-                overflow: auto;
-            }
 
-            .white_content_small {
-                display: none;
-                position: absolute;
-                top: 20%;
-                left: 30%;
-                width: 40%;
-                height: 50%;
-                border: 16px solid lightblue;
-                background-color: white;
-                z-index: 1002;
-                overflow: auto;
-            }
 
 
     </style>
 </head>
 
 <body>
+
 <div id="wrap">
     <div id="main">
         <ul id="pageUl" type="circle">
@@ -285,6 +291,7 @@
         </div>
 
         <div style="background-color: #ffffff;position:relative" id="page2" class="page">
+            
             <p style="position:absolute;top:25px;right:1600px;"><img src="../../static/img/数据分析2.png"></p>
             <p style="position:absolute;top:10px;right:350px"><img width="80%" height="80%" src="../../static/img/全部数据.png"></p>
             <p style="position:absolute;top:10px;right:50px"><img width="80%" height="80%" src="../../static/img/有效数据.png"></p>
@@ -316,14 +323,10 @@
 
         </div>
 
-        <div id="page3" class="page" style="position:relative">
+        <div id="page3" class="page" style="position:relative;background-image:url('https://img1.doubanio.com/view/activity_page/raw/public/p3819.jpg');" >
+            {% block grid %}
 
-            普通显示&nbsp&nbsp&nbsp<input type="button" id="ShowButton" name="ShowButton" value="显示"><br>
-            动画显示-1&nbsp<input type="button" id="ShowButton_1" name="ShowButton_1" value="显示"><br>
-            动画显示-2&nbsp<input type="button" id="ShowButton_2" name="ShowButton_2" value="显示"><br>
-            动画显示-3&nbsp<input type="button" id="ShowButton_3" name="ShowButton_3" value="显示"><br>
-            <div id="ShowDiv" name="ShowDiv"></div>
-
+            {% endblock %}
 
 
         </div>
@@ -383,8 +386,9 @@
                                             <input type="text" class="input-sm f                                                                                                    orm-control" name="end"
                                                    placeholder="End Date" id="blog-overview-date-range-2">
                                             <span class="input-group-append">
-                            <span class="input-group-text">
-                          </span>
+                                                <span class="input-group-text">
+                                                </span>
+                                            </span>
                                         </div>
                                     </div>
                                     <div class="col-12 col-sm-6 d-flex mb-2 mb-sm-0">
@@ -429,23 +433,14 @@
             </div>
         </div>
         <div id="page5" class="page">
-            <input id="Button1" type="button" value="点击弹出层" onclick="ShowDiv('MyDiv','fade')" />
-            <!--弹出层时背景层DIV-->
-            <div id="fade" class="black_overlay">
-            </div>
-
-            <div id="MyDiv" class="white_content">
-
-                <div style="text-align: right; cursor: default; height: 40px;">
-                    <span style="font-size: 16px;" onclick="CloseDiv('MyDiv','fade')">关闭</span>
-                </div>
-                目前来说，我还是喜欢这个自己改造的弹出层。自己在项目中也用的是这个。
-            </div>
-        </div>
 
 
-    </div>
+
+		</div>
+
+
 </div>
+
 <script type="text/javascript">
 var dom = document.getElementById("p2_x3");
 var myChart = echarts.init(dom,'walden');
@@ -1060,7 +1055,7 @@ var weatherIcons = {
 };
 
 option = {
-    
+
     tooltip : {
         trigger: 'item',
         formatter: "{a} <br/>{b} : {c} ({d}%)"
@@ -1716,9 +1711,6 @@ if (option && typeof option === "object") {
 </script>
 
 
-
-
-
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
@@ -1730,6 +1722,9 @@ if (option && typeof option === "object") {
 <script src="../../static/js/extras.1.1.0.min.js"></script>
 <script src="../../static/js/shards-dashboards.1.1.0.min.js"></script>
 <script src="../../static/js/app/app-blog-overview.1.1.0.js"></script>
+
+
+
 </body>
 <script type="text/javascript">
     //改变窗口大小时调整图片大小
