--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -1499,13 +1499,14 @@ setTimeout(function () {
         dataset: {
             source: [
                 ['product', '1900-1989', '1990-1999', '2000-2005', '2006-2010', '2010-2015', '2015-2019'],
-                ['计算机', 13, 55, 210, 306, 510, 561],
-                ['科普', 35, 58, 178, 237, 404, 817],
-                ['人工智能', 6, 14, 19, 29, 36, 222],
-                ['科学', 23, 50, 110, 172, 213, 257],
-                ['编程', 6, 28, 138, 203, 329, 328],
-                ['互联网', 0, 7, 31, 75, 255, 353],
-                ['其他', 55.2, 67.6, 69.2, 72.4, 53.9, 39.1],
+                 ['{{tag1.0}}', {{tag1.1}}, {{tag1.2}}, {{tag1.3}}, {{tag1.4}}, {{tag1.5}}, {{tag1.6}}],
+                 ['{{tag2.0}}', {{tag2.1}}, {{tag2.2}}, {{tag2.3}}, {{tag2.4}}, {{tag2.5}}, {{tag2.6}}],
+                 ['{{tag3.0}}', {{tag3.1}}, {{tag3.2}}, {{tag3.3}}, {{tag3.4}}, {{tag3.5}}, {{tag3.6}}],
+                 ['{{tag4.0}}', {{tag4.1}}, {{tag4.2}}, {{tag4.3}}, {{tag4.4}}, {{tag4.5}}, {{tag4.6}}],
+                 ['{{tag5.0}}', {{tag5.1}}, {{tag5.2}}, {{tag5.3}}, {{tag5.4}}, {{tag5.5}}, {{tag5.6}}],
+                 ['{{tag6.0}}', {{tag6.1}}, {{tag6.2}}, {{tag6.3}}, {{tag6.4}}, {{tag6.5}}, {{tag6.6}}],
+                ['{{res.0}}', {{res.1}}, {{res.2}}, {{res.3}}, {{res.4}}, {{res.5}}, {{res.6}}],
+            ]
         },
         xAxis: {type: 'category'},
         yAxis: {gridIndex: 0},
